--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,3 @@
-<!DOCTYPE html>
-<!-- saved from url=(0066)file:///C:/Users/User/Documents/web/12324324234.carrd.co/index.htm -->
 <html lang="en">
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -10,9 +8,9 @@
         <meta property="og:title" content="Ed7it">
         <meta property="og:type" content="website">
         <meta property="og:description" content="Bio with Social URL`s & Resources">
-        <meta property="og:image" content="https://12324324234.carrd.co/assets/images/card.jpg?v=af9dbcd8">
+        <meta property="og:image" content="https://sun9-49.userapi.com/impg/1m4EBs4OB7gSCXPc7GVuLNbgT_e8EofacZ_Ocg/lsfa7u83TAM.jpg?size=320x320&quality=96&sign=adaa591903fe9e624ee6a0fc9b47bb1f&type=album">
         <meta property="og:image:type" content="image/jpeg">
-        <meta property="og:image:width" content="1280"><meta property="og:image:height" content="800">
+        <!-- <meta property="og:image:width" content="1280"><meta property="og:image:height" content="800"> --> 
         <meta property="og:url" content="https://ed7it.tk/">
         <meta property="twitter:card" content="summary_large_image">
         <link rel="canonical" href="index.html">
